--- a/app/globals.css
+++ b/app/globals.css
@@ -42,3 +42,12 @@ body {
   font-weight: 500;
   color: #ddd8d8;
 }
+.errorbutton button{
+  cursor: pointer;
+  outline: none;
+  border: 2px solid  #ffc905;
+  border-radius: 3px ;
+  padding:10px;
+  background: linear-gradient(90deg, #f9572a, #ffc905);
+
+}
